# qrcodelyze_desktop

./: .claude-context.md  .gitignore  .gitmodules  CC_SETUP.md  CLAUDE.md  QUICK_START.md  README.md  analysis_options.yaml  pubspec.yaml  setup_cc.sh  thresholds_new.pnm
.claude/: instructions.md  settings.local.json
.cursor/rules/: instructions.mdc  rules.json
.github/workflows/: flutter.yml
android/app/: build.gradle.kts
coverage/: lcov.info
docs/: flutter commands.md  クィックガイド.md  バーコード・QRコードフォーマット仕様一覧.md  ブランチ戦略.md  実装プラン.md
docs/ui_designs/: ui_structure.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: app_constants.dart
lib/log/: log_wrapper.dart  logger.dart
lib/models/: barcode_format.dart  clipboard_image_source.dart  file_image_source.dart  image_source.dart  qr_data_provider.dart  scan_history_provider.dart  settings_provider.dart
lib/platform/: clipboard_wic_image_reader.dart  dib_parser.dart  image_preprocessor.dart
lib/plugins/: drag_drop_plugin.dart
lib/providers/: barcode_provider.dart  scan_provider.dart
lib/screens/: camera_preview_screen.dart  log_view.dart  (+3 more)
linux/: CMakeLists.txt
native/zxing_decoder/: CMakeLists.txt
native/zxing_decoder/include/: zxing_decoder.h
native/zxing_decoder/src/: zxing_decoder.cpp
scripts/: build_flutter_zxing_windows.ps1
test/: barcode_generator_test.dart  logging_test.dart  main_test.dart  sample_test.dart  state_management_test.dart  validation_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+24 files in other folders)
